--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && git add dist -f && git commit -m 'Deploy to GitHub Pages' && git push origin `git subtree split --prefix dist main`:gh-pages --force"
   },
   "devDependencies": {
     "vite": "^5.3.4"
