--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "autoprefixer": "^10.4.20",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18"
@@ -17,7 +18,7 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
