--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stranger-things",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://themattery.github.io/Stranger-Things-Website/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   }
